[NO JIRA] replacing collect by toList