@@ -52,7 +52,6 @@ import static java.lang.String.format;
 import static java.net.HttpURLConnection.HTTP_FORBIDDEN;
 import static java.net.HttpURLConnection.HTTP_OK;
 import static java.net.HttpURLConnection.HTTP_UNAUTHORIZED;
-import static java.util.stream.Collectors.toList;
 
 public class GithubApplicationClientImpl implements GithubApplicationClient {
   private static final Logger LOG = Loggers.get(GithubApplicationClientImpl.class);
@@ -121,7 +120,7 @@ public class GithubApplicationClientImpl implements GithubApplicationClient {
       List<String> missingPermissions = permissions.entrySet().stream()
         .filter(permission -> !Objects.equals(permission.getValue(), perms.get(permission.getKey())))
         .map(Map.Entry::getKey)
-        .collect(toList());
+        .toList();
 
       if (!missingPermissions.isEmpty()) {
         String message = missingPermissions.stream()
@@ -155,7 +154,7 @@ public class GithubApplicationClientImpl implements GithubApplicationClient {
         organizations.setOrganizations(gsonInstallations.get().installations.stream()
           .map(gsonInstallation -> new Organization(gsonInstallation.account.id, gsonInstallation.account.login, null, null, null, null, null,
             gsonInstallation.targetType))
-          .collect(toList()));
+          .toList());
       }
 
       return organizations;
@@ -184,7 +183,7 @@ public class GithubApplicationClientImpl implements GithubApplicationClient {
       if (gsonRepositories.get().items != null) {
         repositories.setRepositories(gsonRepositories.get().items.stream()
           .map(GsonGithubRepository::toRepository)
-          .collect(toList()));
+          .toList());
       }
 
       return repositories;
