@@ -20,7 +20,6 @@
 package org.sonar.server.es;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 import org.sonar.core.util.stream.MoreCollectors;
 import org.sonar.db.DbSession;
 import org.sonar.db.component.BranchDto;
@@ -54,7 +53,7 @@ public interface ProjectIndexers {
   default void commitAndIndexBranches(DbSession dbSession, Collection<BranchDto> branches, ProjectIndexer.Cause cause) {
     Collection<String> branchUuids = branches.stream()
       .map(BranchDto::getUuid)
-      .collect(Collectors.toList());
+      .toList();
     commitAndIndexByProjectUuids(dbSession, branchUuids, cause);
   }
 }
