@@ -48,7 +48,6 @@ import org.sonar.db.user.UserDto;
 import static java.util.Collections.singleton;
 import static java.util.Optional.of;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.apache.commons.lang.StringUtils.defaultIfEmpty;
 import static org.sonar.api.web.UserRole.PUBLIC_PERMISSIONS;
@@ -189,7 +188,7 @@ public class ServerUserSession extends AbstractUserSession {
 
     return projects.stream()
       .filter(project -> authorizedProjectsUuids.contains(project.getUuid()))
-      .collect(toList());
+      .toList();
   }
 
   private Set<String> keepProjectsUuidsByPermission(String permission, Collection<String> projectsUuids) {
