@@ -27,7 +27,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.sonar.core.util.stream.MoreCollectors;
 import org.sonar.db.DbClient;
@@ -164,7 +163,7 @@ public class PermissionIndexer implements ProjectIndexer {
       .map(indexTypeByFormat::get)
       .filter(Objects::nonNull)
       .map(indexType -> new BulkIndexer(esClient, indexType, Size.REGULAR, new OneToOneResilientIndexingListener(dbClient, dbSession, items)))
-      .collect(Collectors.toList());
+      .toList();
 
     if (bulkIndexers.isEmpty()) {
       return result;
