@@ -51,7 +51,6 @@ import org.sonarqube.ws.AlmIntegrations.SearchAzureReposWsResponse;
 
 import static java.util.Comparator.comparing;
 import static java.util.Objects.requireNonNull;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.Collectors.toSet;
 import static org.apache.commons.lang.StringUtils.containsIgnoreCase;
@@ -134,7 +133,7 @@ public class SearchAzureReposAction implements AlmIntegrationsWsAction {
         .filter(r -> isSearchOnlyByProjectName(searchQuery) || doesSearchCriteriaMatchProjectOrRepo(r, searchQuery))
         .map(repo -> toAzureRepo(repo, sqProjectsKeyByAzureKey))
         .sorted(comparing(AzureRepo::getName, String::compareToIgnoreCase))
-        .collect(toList());
+        .toList();
 
       LOG.debug(repositories.toString());
 
