@@ -21,7 +21,6 @@ package org.sonar.server.almsettings.ws;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.sonar.api.server.ws.Change;
 import org.sonar.api.server.ws.Request;
 import org.sonar.api.server.ws.Response;
@@ -109,7 +108,7 @@ public class ListAction implements AlmSettingsWsAction {
 
           return almSettingBuilder.build();
         })
-        .collect(Collectors.toList());
+        .toList();
       return ListWsResponse.newBuilder()
         .addAllAlmSettings(wsAlmSettings).build();
     }
