@@ -45,7 +45,6 @@ import org.sonarqube.ws.MediaTypes;
 import static com.google.common.base.Preconditions.checkArgument;
 import static java.lang.String.format;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.sonar.api.web.UserRole.USER;
 import static org.sonar.server.ws.KeyExamples.KEY_BRANCH_EXAMPLE_001;
@@ -118,7 +117,7 @@ public class IssuesAction implements BatchWsAction {
       List<String> usersUuids = issueDtos.stream()
         .filter(issue -> issue.getAssigneeUuid() != null)
         .map(IssueDto::getAssigneeUuid)
-        .collect(toList());
+        .toList();
 
       Map<String, String> userLoginsByUserUuids = dbClient.userDao().selectByUuids(dbSession, usersUuids)
         .stream().collect(toMap(UserDto::getUuid, UserDto::getLogin));
