@@ -384,7 +384,7 @@ public class BulkChangeAction implements IssuesWsAction {
       List<IssueDto> allIssues = dbClient.issueDao().selectByKeys(dbSession, issueKeys)
         .stream()
         .filter(issueDto -> SECURITY_HOTSPOT.getDbConstant() != issueDto.getType())
-        .collect(Collectors.toList());
+        .toList();
 
       List<ComponentDto> allProjects = getComponents(dbSession, allIssues.stream().map(IssueDto::getProjectUuid).collect(MoreCollectors.toSet()));
       this.projectsByUuid = getAuthorizedProjects(allProjects).stream().collect(uniqueIndex(ComponentDto::uuid, identity()));
